fixed double tap zooming on mobile... again?

--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,8 @@
   font-family: Calibri;
   margin: 0;
   padding: 0;
+
+  touch-action: manipulation;
 }
 
 body {
